bug(tooltip): Tooltip contents not visible in Dark theme
Fixed the bug that prevents the content of the tooltip to be visible in dark mode

#3721

--- a/src/clr-angular/utils/_theme.dark.clarity.scss
+++ b/src/clr-angular/utils/_theme.dark.clarity.scss
@@ -667,7 +667,7 @@ $clr-nav-link-color: hsl(203, 16%, 72%);
   *
   * Usage: ../popover/tooltip/_tooltips.clarity.scss
   */
-$clr-tooltip-font-color: hsl(0, 0%, 0%);
+$clr-tooltip-color: hsl(0, 0%, 0%);
 $clr-tooltip-background-color: hsl(0, 0%, 100%);
 // END: Tooltip
 
